--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "aws-sdk": "^2.2.43",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "formidable": "^1.0.17",
     "jade": "~1.11.0",
+    "mime": "^1.3.4",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
